--- a/public_html/Members_of_Project.html
+++ b/public_html/Members_of_Project.html
@@ -44,6 +44,21 @@
     </a>
 </div>
 
+<section>
+  <div class="welcometxt">
+    <h1>Welcome to the Final Page</h1>
+      <ul>
+        <li>Maximiliano Lozada</li>
+        <li>Mohammad-Shamel Agha</li>
+        <li>Jersey Ibe</li>
+      </ul>
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+  </div>
+</section>
+
+
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
