--- a/public_html/Docker_Tutorial.html
+++ b/public_html/Docker_Tutorial.html
@@ -45,9 +45,14 @@
     </a>
 </div>
 
-<div class="dt" id="myDT">
+<div class="ghtxt">
   <section>
-    <h1>Docker Tutorial</h1>
+    <div>
+      <h1>Docker Tutorial</h1>
+      <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+      <script src="js/plugins.js"></script>
+      <script src="js/main.js"></script>
+    </div>
     <h2>Configuring NGINX For Docker:</h2>
     <p>1. Boot up Git Bash or any type of command prompt and change directories to the directory that possesses your git repository.</p>
     <p>2. Next, type "vi Dockerfile" in the terminal to create and open a file called Dockerfile with the vi editor.</p>
@@ -63,7 +68,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ports: <br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- "8080:80" <br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;environment: <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- NGINX_HOST=foobar.com
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- NGINX_HOST=foobar.com<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- NGINX_PORT=80 </b></p>
     <p>6. Press shift followed by two z presses to save the file and just like that you have configured the Apache server to run on Docker.</p>
     <p>7. Run the command "docker-compose up -d" in the terminal to start up the Apache Container. It will take a little bit of time to start up.</p>
