This commit is to update azure cloud

--- a/public_html/Docker_Tutorial.html
+++ b/public_html/Docker_Tutorial.html
@@ -74,7 +74,7 @@
     <p>7. Run the command "docker-compose up -d" in the terminal to start up the Apache Container. It will take a little bit of time to start up.</p>
     <p>8. Once the container finishes the start up process, open Docker Desktop to view that the container is running. You can either type in "http://localhost:8080/" or click on the container and click open in browser to view your Apache Web Server.</p>
     <h2>Just like that, you have configured NGINX to run on Docker. The next tutorial will show how to take this web server and host it to the Azure Cloud.</h2>
-    <h3><a href="https://github.com/Exodo-LS/IS218Project1">Click here to view our repository</a></h3>
+    <button onclick="window.location.href='https://github.com/Exodo-LS/IS218Project1'">Click here to view our repository</button>
   </section>
 </div>
 
