--- a/public_html/Azure_Cloud_Tutorial.html
+++ b/public_html/Azure_Cloud_Tutorial.html
@@ -44,7 +44,38 @@
     </a>
 </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+
+<div>
+  <section>
+    <div class="welcometxt">
+      <h1> Azure Configuration Tutorial</h1>
+      <h3><b>Use Powershell, It doesnt provide errors</b></h3>
+      <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+      <script src="js/plugins.js"></script>
+      <script src="js/main.js"></script>
+    </div>
+  </section>
+</div>
+
+<section>
+  <div class="ghtxt">
+    <h2>Configuring Docker Image to Push to Azure: </h2>
+    <p>1. Assuming you are in the correct directory, you will be uploading the image that you built to docker hub. First run the command <b>docker build --tag <<username>>/repository:tag .</b>.</p>
+    <p>2. Once the command finishes, open Docker hub in your browser and login. You will create a repository like in GitHub.</p>
+    <p>3. Switch back to powershell and run the command <b>docker push "Docker Username"/repository:tag</b>. This will push the docker repository to your Docker Hub, like in GitHub. Reopen the browser and you should now see an image on your Docker Hub.</p>
+    <p>4. Back in powershell, run <b>docker login azure</b>. This will prompt a screen for you to login into Azure.</p>
+    <p>5. After you login, run <b>docker context create aci myaci</b>. It will ask you to select a subscription and resource group. Use the arrow keys and enter to confirm your selections.</p>
+    <p>6. <b>docker context use myaci</b> will switch over to the context you created. Now run <b>docker run --domainname myapp -dp 80:80 <<username>>/repository</b> to create a container on Azure.<p>
+    <p>7. Log into your Azure dashboard and you should see your container under "All resources". Click on it and copy the ip address there. In a new tab, paste that ip address and you should see your web page that you created.</p>
+    <h3>This concludes the tutorial to configure Azure from Docker. Feel free to head over to Useful Commands to learn some shortcuts with Vi and some helpful resources.</h3>
+  </div>
+</section>
+
+<sectioin>
+  <div class="emptyspace"></div>
+</sectioin>
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
